Diminuí a largura do rodapé editando o texto e consertando o estilo; Consertei o estilo das tabelas.

--- a/htdocs/css/autor.css
+++ b/htdocs/css/autor.css
@@ -1,8 +1,1 @@
-/*
-	Copyleft 2013 iuri.blog.br
-	Licença disponível em http://iuri.blog.br/sobre/
-*/
-p.juramidam {
-	color: #999;
-}
-
+/home/iggy/var/sites/blog/htdocs/css/autor.css
