--- a/htdocs/css/post.css
+++ b/htdocs/css/post.css
@@ -1,11 +1,1 @@
-/*
-	Copyleft 2013 iuri.blog.br
-	Licença disponível em http://iuri.blog.br/sobre/
-*/
-p.citacao {
-	font-style:italic;
-}
-p.aviso {
-	font-weight:bold;
-}
-
+/home/iggy/var/sites/blog/htdocs/css/post.css
