--- a/htdocs/css/frases.css
+++ b/htdocs/css/frases.css
@@ -1,14 +1,1 @@
-/*
-	Copyleft 2013 iuri.blog.br
-	Licença disponível em http://iuri.blog.br/sobre/
-*/
-body {
-	text-align:center;
-}
-table.frases tr, table.frases td {
-	border:0.01em solid white;
-}
-ul.horizontal a {
-	text-decoration:none;
-}
-
+/home/iggy/var/sites/blog/htdocs/css/frases.css
