--- a/htdocs/css/autor.css
+++ b/htdocs/css/autor.css
@@ -1,1 +1,8 @@
-/home/iggy/var/sites/blog/htdocs/css/autor.css
+/*
+	Copyleft 2013 iuri.blog.br
+	Licença disponível em http://iuri.blog.br/sobre/
+*/
+p.juramidam {
+	color: #999;
+}
+
