--- a/htdocs/css/index.css
+++ b/htdocs/css/index.css
@@ -1,1 +1,37 @@
-/home/iggy/var/sites/blog/htdocs/css/index.css
+/*
+	Copyleft 2013 iuri.blog.br
+	Licença disponível em http://iuri.blog.br/sobre/
+*/
+body {
+	text-align:center;
+}
+img {
+	border:0;
+}
+table {
+	caption:top;
+	margin-left:auto;
+	margin-right:auto;
+}
+table.canais, table.postagens, table.postagens tr, table.postagens td, table.canais tr, table.canais td {
+	border:0.1em solid white;
+}
+table.postagens thead {
+	background-color:white;
+	color:#D02121;
+}
+table.postagens a {
+	text-decoration:none;
+}
+span.importante {
+	background-color:white;
+	color:#D02121;
+}
+span.importante a {
+	color:#D02121;
+	text-decoration:none;
+}
+p.grande {
+	font-size:xx-large;
+}
+
