--- a/htdocs/css/rodape.css
+++ b/htdocs/css/rodape.css
@@ -32,6 +32,7 @@ p, h1, h2, h3, h4, h5, h6 {
 	height:96px;
 }
 .rodape {
+	text-align:center;
 	position:fixed;
 	bottom:0;
 	width:100%;
@@ -47,9 +48,11 @@ p, h1, h2, h3, h4, h5, h6 {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#dc0033', endColorstr='#a60027',GradientType=0 );
 }
 .licenca {
+	text-align:center;
 	padding:0.01em;
 }
 span.licenca_imagens {
+	text-align:center;
 	float:left;
 }
 span.licenca_texto {
