Alterei páginas para melhorar conformidade com especificações da w3c de html5

--- a/htdocs/css/autor.css
+++ b/htdocs/css/autor.css
@@ -1,8 +1,9 @@
+@charset 'UTF-8';
 /*
 	Copyleft 2013 iuri.blog.br
 	Licença disponível em http://iuri.blog.br/sobre/
 */
-p.juramidam {
+.juramidam {
 	color: #999;
 }
 
