--- a/htdocs/css/frases.css
+++ b/htdocs/css/frases.css
@@ -1,3 +1,4 @@
+@charset 'UTF-8';
 /*
 	Copyleft 2013 iuri.blog.br
 	Licença disponível em http://iuri.blog.br/sobre/
@@ -10,5 +11,12 @@ table.frases tr, table.frases td {
 }
 ul.horizontal a {
 	text-decoration:none;
+}
+span.frase_normal {
+	text-align:center;
+}
+span.frase_destaque {
+	background-color:white;
+	color:#D02121;
 }
 
