--- a/htdocs/css/post.css
+++ b/htdocs/css/post.css
@@ -1,8 +1,21 @@
+@charset 'UTF-8';
 /*
 	Copyleft 2013 iuri.blog.br
 	Licença disponível em http://iuri.blog.br/sobre/
 */
-.disclaimer, p.citacao {
+.disclaimer {
+	font-style:italic;
+}
+.aviso, .perigo {
+	font-weight:bold;
+	text-decoration:underline;
+}
+.poema li, .poema ul {
+	font-style:italic;
+	list-style-type:none;
+}
+/* Estilos antigos, para compatibilidade */
+p.citacao {
 	font-style:italic;
 }
 span.perigo, p.aviso {
