Adicionei legendas no rodapé

--- a/htdocs/css/index.css
+++ b/htdocs/css/index.css
@@ -43,6 +43,9 @@ table.postagens a {
 	height:32px;
 	width:32px;
 }
+.rodape_imagens_grande img {
+	height:32px;
+}
 img.postagens_links_imagens {
 	height:16px;
 	width:16px;
