--- a/htdocs/css/sobre.css
+++ b/htdocs/css/sobre.css
@@ -3,7 +3,7 @@
 	Copyleft 2013 iuri.blog.br
 	Licença disponível em http://iuri.blog.br/sobre/
 */
-.juramidam p {
-	color:#D02121;
+span.vermelho {
+	color:#8F071F;
 }
 
