--- a/htdocs/css/index.css
+++ b/htdocs/css/index.css
@@ -14,28 +14,96 @@ table {
 	margin-left:auto;
 	margin-right:auto;
 }
-table.canais, table.postagens, table.canais tr, table.canais td, table.postagens tr, table.postagens td {
-	border:0.1em solid white;
+.cabecalho {
+	padding:0.5em;
 }
-table.canais img {
+.cabecalho_titulo {
+	padding:0.5em;
+}
+.cabecalho_avisos {
+	padding:0.5em;
+}
+.cabecalho_avisos a {
+	padding:1em;
+}
+.cabecalho_avisos img {
+	height:64px;
+	width:64px;
+	-moz-border-radius:2em;
+	-webkit-border-radius:2em;
+	-opera-border-radius:2em;
+	-khtml-border-radius:2em;
+	border-radius:2em;
+	-moz-box-shadow:inset 0em 0em 0.5em 0.5em rgba(0,0,0,0.5);
+	-webkit-box-shadow:inset 0em 0em 0.5em 0.5em rgba(0,0,0,0.5);
+	box-shadow:inset 0em 0em 0.5em 0.5em rgba(0,0,0,0.5);
+	border-collapse: separate;
+}
+.cabecalho_menu {
+	padding:0.5em;
+}
+.cabecalho_menu li {
+	background-color:#D02121;
+	border:0.1em solid white;
+	-moz-border-radius:1em;
+	-webkit-border-radius:1em;
+	-opera-border-radius:1em;
+	-khtml-border-radius:1em;
+	border-radius:1em;
+	-moz-box-shadow:inset 0em 0em 0.5em 0.5em rgba(0,0,0,0.5);
+	-webkit-box-shadow:inset 0em 0em 0.5em 0.5em rgba(0,0,0,0.5);
+	box-shadow:inset 0em 0em 0.5em 0.5em rgba(0,0,0,0.5);
+	border-collapse: separate;
+}
+.cabecalho_menu a {
+	padding:0.5em;
+	text-decoration:none;
+}
+.cabecalho_frases {
+	padding:1em;
+	font-size:x-large;
+}
+.cabecalho_frases a {
+	padding:0.2em;
+	text-decoration:none;
+	font-size:xx-large;
+	border:0.1em solid white;
+	-moz-border-radius:1em;
+	-webkit-border-radius:1em;
+	-opera-border-radius:1em;
+	-khtml-border-radius:1em;
+	border-radius:1em;
+	-moz-box-shadow:0em 0em 0.5em 0.2em rgba(0,0,0,0.5);
+	-webkit-box-shadow:0em 0em 0.5em 0.2em rgba(0,0,0,0.5);
+	box-shadow:0em 0em 0.5em 0.2em rgba(0,0,0,0.5);
+	border-collapse: separate;
+}
+.canais_rss {
+	padding:0.5em;
+}
+.canais_rss img {
 	height:16px;
 	width:16px;
 }
-table.postagens thead {
-	background-color:white;
-	color:#D02121;
+.canais_rss tr, .canais_rss td, .postagens thead, .postagens tr, .postagens td {
+	padding:0.5em;
+	border:0.1em solid white;
+	-moz-border-radius:1em;
+	-webkit-border-radius:1em;
+	-opera-border-radius:1em;
+	-khtml-border-radius:1em;
+	border-radius:1em;
 }
-table.postagens a {
+.postagens {
+	padding:0.5em;
+}
+.postagens a {
 	text-decoration:none;
 }
-.frases {
-	font-size:xx-large;
+.postagens thead, .postagens thead tr, .postagens thead td {
+	padding:0.1em;
 }
-.frases a {
-	color:#D02121;
-	text-decoration:none;
-}
-.frases span {
+.postagens thead td {
 	background-color:white;
 	color:#D02121;
 }
@@ -46,15 +114,14 @@ table.postagens a {
 .rodape_imagens_grande img {
 	height:32px;
 }
+.rodape_links, .rodape_infraestrutura, .rodape_tecnologias, .rodape_licencas {
+	padding:0.5em;
+}
 img.postagens_links_imagens {
 	height:16px;
 	width:16px;
 }
 img.postagens_links_imagens_grande {
 	height:16px;
-}
-.avisos_perigo img {
-	height:64px;
-	width:64px;
 }
 
