Adicionei bordas e alterei linha horizontal, adicionei 'voltar' no rodapé das postagens

--- a/htdocs/css/post.css
+++ b/htdocs/css/post.css
@@ -6,6 +6,9 @@
 .disclaimer {
 	font-style:italic;
 }
+.disclaimer span {
+	text-decoration:underline;
+}
 .aviso, .perigo {
 	font-weight:bold;
 	text-decoration:underline;
