--- a/htdocs/css/estilos.css
+++ b/htdocs/css/estilos.css
@@ -30,4 +30,18 @@ ul.vertical, ul.vertical li {
 	padding:0.1em;
 	display:block;
 }
+hr {
+	border:0;
+	color:white;
+	background-color:white;
+	height:1px;
+	-moz-border-radius:1em;
+	-webkit-border-radius:1em;
+	-opera-border-radius:1em;
+	-khtml-border-radius:1em;
+	border-radius:1em;
+	-moz-box-shadow:0em 0em 0.5em 0.2em rgba(0,0,0,0.5);
+	-webkit-box-shadow:0em 0em 0.5em 0.2em rgba(0,0,0,0.5);
+	box-shadow:0em 0em 0.5em 0.2em rgba(0,0,0,0.5);
+}
 
